welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:51: error: not found: value fleur
					fleur(Color.Blue)
                                        ^